<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinanceManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add_record">Add Record</string>
    <string name="add_budget">Add Budget</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="tab_date">Date</string>
    <string name="tab_time">Time</string>
    <string name="enter_cost">Enter cost</string>
    <string name="add_photo_hint">Click to add photo</string>
    <string name="record_added">Record added</string>
    <string name="empty_budget_message">Seems like your don\'t have any money. Click to add some</string>
    <string name="category_hint">Enter category</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="add_funds">Add funds</string>
    <string name="settings_notification">notification_preference</string>
    <string name="settings_private">private</string>
    <string name="settings_private_password">private_password</string>
    <string name="settings_limitations_per_day">limitations_per_day</string>
    <string name="settings_limitations_per_week">limitations_per_week</string>
    <string name="settings_limitations_per_month">limitations_per_month</string>
    <string name="search">Search</string>
    <string name="select_start_date">Select start date</string>
    <string name="max_cost">"Max cost: "</string>
    <string name="min_cost">"Min cost: "</string>
    <string name="week_overall">"Week overall: "</string>
    <string name="month_overall">"Month overall: "</string>
    <string name="select_date">Select Date</string>
    <string name="choose_category">Choose Category</string>
    <string name="edit">Edit</string>

</resources>
