<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_money"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_budget"
        android:orderInCategory="100"
        android:showAsAction="always"/>

    <item
        android:id="@+id/action_add_record"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_record"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView" />

</menu>
